✨ 검색엔진 최적화(SEO) 작업 (#4)
* ✨ 검색엔진 최적화(SEO) 작업

- 네이버/구글 웹마스터 태그 추가
- robots.txt 업데이트
- sitemap.xml 생성

* ♻️ Meta Tag 내용 수정

--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="리서치, 자료조사하며 발견한 링크와 웹사이트, 북마크보다 쉽고 빠르게 정리하세요.
-		크롬 확장프로그램 유어링크로 매일매일 쌓이는 나의 성장기록을 보관하고 관리해보세요."
-		/>
-		<meta
-			name="keywords"
-			content="웹사이트, 링크, 방문기록, 성장, 유어링크, 리서치, 생산성,크롬확장프로그램,조사"
-		/>
-		<meta
-			property="og:title"
-			content="내가 방문한 웹사이트와 링크, 유어링크로 쉽고 편하게 관리하세요."
-		/>
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://urlink-official.com/" />
-		<meta
-			property="og:description"
-			content="리서치, 자료조사하며 발견한 링크와 웹사이트, 북마크보다 쉽고 빠르게 정리하세요.
-		크롬 확장프로그램 유어링크로 매일매일 쌓이는 나의 성장기록을 보관하고 관리해보세요."
-		/>
-		<meta name="robots" content="index, follow" />
-		<meta property="og:locale" content="en_EN" />
-		<meta property="og:site_name" content="urLink" />
-		<meta property="og:image" content="%PUBLIC_URL%/opengraph_image.png" />
-		<meta
-			property="twitter:title"
-			content="내가 방문한 웹사이트와 링크, 유어링크로 쉽고 편하게 관리하세요."
-		/>
-		<meta
-			property="twitter:description"
-			content="리서치, 자료조사하며 발견한 링크와 웹사이트, 북마크보다 쉽고 빠르게 정리하세요.
-		크롬 확장프로그램 유어링크로 매일매일 쌓이는 나의 성장기록을 보관하고 관리해보세요."
-		/>
-		<meta property="twitter:site" content="https://urlink-official.com/" />
+		<title>유어링크 urLink</title>
 
-		<title>urLink</title>
+		<meta charset="utf-8" />
+		<link rel="icon" href="https://urlink-official.com/client/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#000000">
+		<meta name="description" content="내게 도움이 되는 웹사이트, 저장은 했는데 다시 읽지 않으시나요? 유어링크가 발견한 웹사이트와 방문기록을, 쉽게 정리하고 다시 읽게 도와드릴게요.">
+		<meta name="keywords" content="웹사이트, 북마크, 유어링크, 방문기록, 탭, 정리, 생산성, 크롬 확장프로그램, 북마크 관리 프로그램, 북마크 가져오기, 방문기록 보는법, 방문기록 날짜 검색">
+		<meta name="author" content="urLink">
+		<meta name="robots" content="index,follow">
+		<meta name="naver-site-verification" content="9e9b2af13a30e9f5e782fac2f8181bcd1ea8d09d" />
+		<meta name="google-site-verification" content="tYiJYVU1pI1o_cBTSL3P7YqrEMKhCgOR_ICj6sVlX6g" />
+
+		<!-- og tag -->
+		<meta property="og:title" content="유어링크 - 북마크보다 손쉽게 웹사이트를 보관하고 정리하세요.">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://urlink-official.com">
+		<meta property="og:description" content="내게 도움이 되는 웹사이트, 저장은 했는데 다시 읽지 않으시나요? 유어링크가 발견한 웹사이트와 방문기록을, 쉽게 정리하고 다시 읽게 도와드릴게요.">
+		<meta property="og:locale" content="ko-KR">
+		<meta property="og:site_name" content="유어링크 urLink">
+		<meta property="og:image" content="https://urlink-official.com/client/opengraph_image.png">
+
+		<!-- twitter og tag -->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:title" content="유어링크 - 북마크보다 손쉽게 웹사이트를 보관하고 정리하세요.">
+		<meta name="twitter:description" content="내게 도움이 되는 웹사이트, 저장은 했는데 다시 읽지 않으시나요? 유어링크가 발견한 웹사이트와 방문기록을, 쉽게 정리하고 다시 읽게 도와드릴게요.">
+		<meta name="twitter:site" content="https://urlink-official.com">
+		<meta name="twitter:domain" content="유어링크 urLink">
+		<meta name="twitter:image" content="https://urlink-official.com/client/opengraph_image.png">
+
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
 </html>
