♻️ favicon 불러오기 상대 경로로 수정

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<title>유어링크 urLink</title>
 
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://urlink-official.com/client/favicon.ico" />
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#000000">
 		<meta name="description" content="내게 도움이 되는 웹사이트, 저장은 했는데 다시 읽지 않으시나요? 유어링크가 발견한 웹사이트와 방문기록을, 쉽게 정리하고 다시 읽게 도와드릴게요.">
